--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -83,6 +83,7 @@
   <script src="js/plugins/moment.min.js"></script>
   <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
   <script src="js/plugins/bootstrap-datetimepicker.min.js"></script>
+  <script src="js/phishy-common.js"></script>
 
 
 </head>
