--- a/src/main/resources/templates/pages/status_detail.html
+++ b/src/main/resources/templates/pages/status_detail.html
@@ -72,61 +72,77 @@
                     </div>
                   </div>
                   <div class="row">
-                    <label class="col-sm-4 text-right">훈련 기간</label>
-                    <div class="col-sm-8">
-                      <span class="trp_start"></span> ~
-                      <span class="trp_end"></span>
-                    </div>
-                  </div>
-                  <div class="row">
                     <label class="col-sm-4 text-right">훈련 내용</label>
                     <div class="col-sm-8">
                       <span class="trp_content"></span>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-sm-12 text-center button-wrapper">
-                      <button type="button" class="btn btn-primary btn-sm detail-btn" data-toggle="modal" data-target="#detailModal">상세보기</button>
+                    <label class="col-sm-4 text-right">훈련 기간</label>
+                    <div class="col-sm-8">
+                      <span class="trp_start"></span> ~
+                      <span class="trp_end"></span>
                     </div>
                   </div>
-
                 </div>
               </div>
           </div>
           <div class="col-lg-6 col-md-12">
-              <div class="card">
-                <div class="card-header card-header-rose">
-                  <h4 class="card-title">훈련 상태</h4>
+            <div class="card card-chart">
+              <div class="card-header card-header-icon card-header-danger">
+                <div class="card-icon">
+                  <i class="material-icons">pie_chart</i>
                 </div>
-                <div class="card-body table-responsive">
-                  <div class="row">
-                    <label class="col-sm-4 text-right">훈련 기간</label>
-                    <div class="col-sm-8">
-                      <span class="trp_start"></span> ~
-                      <span class="trp_end"></span>
-                    </div>
+                <h4 class="card-title">훈련 상태</h4>
+              </div>
+              <div class="card-body">
+                <div id="chartPreferences" class="ct-chart"></div>
+              </div>
+              <div class="card-footer">
+                <div class="row">
+                  <div class="col-md-12">
+                    <h6 class="card-category">구분</h6>
                   </div>
-                  <div class="row">
-                    <label class="col-sm-4 text-right">훈련 내용</label>
-                    <div class="col-sm-8">
-                      <span class="trp_content"></span>
-                    </div>
+                  <div class="col-md-12">
+                    <i class="fa fa-circle text-info"></i> 발송
+                    <i class="fa fa-circle text-warning"></i> 발송중
+                    <i class="fa fa-circle text-danger"></i> 미발송
                   </div>
-                  <div class="row">
-                    <div class="col-sm-12 text-center button-wrapper">
-                      <button type="button" class="btn btn-primary btn-sm detail-btn" data-toggle="modal" data-target="#detailModal">상세보기</button>
-                    </div>
-                  </div>
-
                 </div>
               </div>
+            </div>
+        </div>
+        <div class="col-lg-12 col-md-12">
+          <div class="card">
+            <div class="card-header card-header-rose">
+              <h4 class="card-title">훈련 대상자 리스트</h4>
+            </div>
+            <div class="card-body table-responsive">
+                <table id="TUIDatatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
+                  <thead>
+                    <tr>
+                      <th>이름</th>
+                      <th>이메일</th>
+                      <th>직급</th>
+                      <th>소속</th>
+                      <th>부서</th>
+                    </tr>
+                  </thead>
+                  </tbody>
+                </table>
+            </div>
           </div>
+      </div>
 
       </div> <!-- row ends -->
 
       <footer th:replace="fragments/footer"></footer>
 
   <script>
+
+    var trpId = geturlparam("trp");
+    var trsId = geturlparam("trs");
+    var tugId = geturlparam("tug");
 
     function getProjectDetails(trpId,trsId,tugId) {
       $.ajax({
@@ -136,12 +152,13 @@
         beforeSend: function (xhr) {
           xhr.setRequestHeader(header, token);
         },
-        data: {'tugId': tugId},
+        data: {
+          'trpId': trpId,
+          'trsId': trsId,
+          'tugId': tugId
+        },
         success: function (result) {
-          var tug_data = result.tug_data;
           console.log(result);
-          console.log(tug_data);
-          return tug_data;
         },
         error: function (thrownError) {
           console.log(thrownError);
@@ -150,6 +167,39 @@
     }
 
     $(document).ready(function() {
+
+      getProjectDetails(trpId, trsId, tugId);
+
+      $('#TUIDatatables').DataTable({
+        "pagingType": "full_numbers",
+        "lengthMenu": [
+          [10, 25, 50, -1],
+          [10, 25, 50, "All"]
+        ],
+        responsive: true,
+        language: {
+          search: "_INPUT_",
+          searchPlaceholder: "Search records",
+        },
+        ordering : false,
+        ajax : {
+          type : "POST",
+          url : "getTUIdetails.do",
+          dataType : "JSON",
+          data : {'tugId' : tugId},
+          beforeSend: function (xhr) {
+            xhr.setRequestHeader(header, token);
+          },
+        },
+        columns : [
+          {data : "user_nm"},
+          {data : "user_email"},
+          {data : "user_rank"},
+          {data : "corp_nm"},
+          {data : "dept_nm"},
+      ],
+
+      });
 
 
     });
